samples/_failures_safe/1761503416_50be52_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b282e8f8.c: In function ‘main’:
./samples/SAFE/__tmp_b282e8f8.c:141:5: error: expected expression at end of input
  141 |     if (len > 0 && input[len - 1] == '\n')
      |     ^~
./samples/SAFE/__tmp_b282e8f8.c:141:5: error: expected declaration or statement at end of input
